--- a/css/variables.css
+++ b/css/variables.css
@@ -17,6 +17,8 @@ input, textarea, [contenteditable]{
 html{
     -webkit-overflow-scrolling:touch;
     overscroll-behavior:none;
+    overflow-x:hidden;
+    max-width:100vw;
 }
 body{
     -webkit-font-smoothing:antialiased;
